--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="img/icons/32.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/icons/180.png">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Cuprum?query=cuprum&preview.text_type=custom">
+    <link href="normalize.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
       </head>
       <body>
           <header>
