--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="img/icons/32.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/icons/180.png">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cuprum&family=PT+Sans&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -16,24 +16,33 @@
 <body class="page-body">
     <header class="main-header">
         <section class="main-menu">
-            <a href="#" class="main-logo"><img src="img/logo-technomart.svg" width="106.83" height="16.9" alt="Лого"></a>
+            <a href="#" class="main-logo"><img src="img/logo-technomart.svg" width="108" height="18" alt="Лого"></a>
             <form action="#" method="get">
                 <input id="s-search" type="text" name="search" placeholder="Поиск:" class="search">
             </form>
-            <a href="#" class="mark-basket">Закладки: <span>0</span></a>
-            <a href="#" class="mark-basket">Корзина: <span>0</span></a>
+            <a href="#" class="user-link"><svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14 15C14 15.55 13.632 15.741 13.182 15.426L7.819 11.661C7.369 11.346 6.632 11.346 6.182 11.661L0.818 15.426C0.368 15.741 0 15.55 0 15V1C0 0.45 0.45 0 1 0H13C13.55 0 14 0.45 14 1V15Z" fill="white"/>
+                </svg>Закладки: <span>0</span></a>
+            <a href="#" class="user-link"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="white"/>
+                <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="white"/>
+                <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="white"/>
+                </svg>Корзина: <span>0</span></a>
             <button type="button" class="order-button">Оформить заказ</button>
         </section>
         <section>
             <p class="header-description">Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
-            <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
+            <a href="tel:+78125550555" class="header-phone"><svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15.572 18.985H14.631C10.502 18.497 7.47403 16.577 5.27203 14.121C3.06203 11.66 1.31803 8.49202 0.978027 4.22802V3.08402C1.05603 2.31002 1.43703 1.78002 1.87603 1.32702C2.42503 0.76602 3.25003 0.0440198 4.00203 0.0190198C4.55603 0.00101977 5.50203 0.39902 5.88103 0.91802C6.21003 1.36402 6.38503 2.25702 6.53703 2.92102C6.69103 3.59202 7.04203 4.56402 6.94503 5.21002C6.79703 6.21702 5.45803 6.64402 5.06603 7.37602C6.37303 10.511 8.50903 12.815 11.359 14.407C12.074 14.015 12.705 12.835 13.691 12.812C14.05 12.803 14.509 12.99 14.875 13.098C15.277 13.219 15.625 13.373 15.979 13.506C16.575 13.73 17.627 14.027 17.983 14.527C18.348 15.04 18.553 15.883 18.473 16.406C18.309 17.447 16.594 18.603 15.572 18.985Z" fill="#B7BFC8"/>
+                </svg>
+                +7 (812) 555-05-55</a>
             <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <button type="button" class="button-log-reg"><svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="#" class="button-log-reg"><svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.1667 9L5.71429 0.5V6.5H0V11.5H5.71429V17.5L14.1667 9Z" fill="#C5C5C5"/>
                 <path d="M16.1771 15.51H11.3895V17.5H16.1771C18.2514 17.5 19.0381 15.69 19.0619 14.474V3.528C19.0381 2.311 18.2514 0.5 16.1771 0.5H11.3895V2.49H16.1771C16.9762 2.49 17.1219 3.171 17.1391 3.547V14.451C17.1229 14.827 16.9762 15.51 16.1771 15.51Z" fill="#C5C5C5"/>
                 </svg>
-                Войти</button>
-            <button type="button" class="button-log-reg">Регистрация</button>
+                Войти</a>
+            <a href="#" class="button-log-reg">Регистрация</a>
         </section>
         <nav class="navigation">
             <ul class="nav-list">
@@ -267,11 +276,11 @@
 
             <p class="footer-text">
                 Обратная связь:
-                <a href="mailto:mail@htmlacademy.ru" class="formail">mail@htmlacademy.ru</a>
+                <a href="mailto:mail@htmlacademy.ru" class="contacts-link">mail@htmlacademy.ru</a>
             </p>
             <p class="footer-text">
                 Разработано -
-                <a href="https://htmlacademy.ru/intensive/htmlcss" class="formail">HTML Academy.ru</a>
+                <a href="https://htmlacademy.ru/intensive/htmlcss" class="contacts-link">HTML Academy.ru</a>
             </p>
         </section>
     </footer>
