--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="img/icons/32.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/icons/180.png">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -46,13 +46,13 @@
         </section>
         <nav class="navigation">
             <ul class="nav-list">
-                <li><a href="#" class="nav-list-item">Главная</a></li>
-                <li><a href="#" class="nav-list-item">Компания</a></li>
-                <li><a href="catalog.html" class="nav-list-item">Каталог</a></li>
-                <li><a href="#" class="nav-list-item">Новости</a></li>
-                <li><a href="#" class="nav-list-item">Спецпредложения</a></li>
-                <li><a href="#" class="nav-list-item">Доставка</a></li>
-                <li><a href="#" class="nav-list-item">Контакты</a></li>
+                <li class="nav-list-item"><a href="#">Главная</a></li>
+                <li class="nav-list-item"><a href="#">Компания</a></li>
+                <li class="nav-list-item"><a href="catalog.html">Каталог</a></li>
+                <li class="nav-list-item"><a href="#">Новости</a></li>
+                <li class="nav-list-item"><a href="#">Спецпредложения</a></li>
+                <li class="nav-list-item"><a href="#">Доставка</a></li>
+                <li class="nav-list-item"><a href="#">Контакты</a></li>
             </ul>
         </nav>
 
@@ -236,7 +236,7 @@
         </div>
     </main>
     <footer class="main-footer">
-        <a href="#" class="main-logo"><img src="img/logo-technomart.svg" width="138" height="23" alt="Лого"></a>
+        <a href="#" class="main-logo main-logo-big"><img src="img/logo-technomart.svg" width="138" height="23" alt="Лого"></a>
         <ul class="fnav-list">
             <li class="fnav-item"><a href="#" class="fnav">Компания</a></li>
             <li class="fnav-item"><a href="#" class="fnav">Новости</a></li>
