--- a/catalog.html
+++ b/catalog.html
@@ -85,14 +85,14 @@
                     <path d="M13.831 6.365L12 4.751V0H9.99998V2.987L7.33198 0.635C7.31198 0.618 7.28898 0.612 7.26798 0.598C7.24294 0.579705 7.21614 0.56396 7.18798 0.551C7.15708 0.540195 7.12529 0.532163 7.09298 0.527C7.06198 0.521 7.03198 0.515 6.99998 0.515C6.96898 0.515 6.93898 0.521 6.90798 0.527C6.87551 0.531919 6.84366 0.5403 6.81298 0.552C6.78498 0.563 6.75998 0.581 6.73298 0.598C6.71198 0.612 6.68798 0.618 6.66898 0.635L0.170976 6.365C0.0162401 6.50291 -0.0375953 6.72187 0.0355474 6.9158C0.10869 7.10974 0.293707 7.23862 0.500976 7.24C0.622907 7.24035 0.740711 7.19586 0.831976 7.115L6.99998 1.677L13.169 7.115C13.3778 7.27913 13.6784 7.25178 13.8542 7.05265C14.0299 6.85352 14.0198 6.55183 13.831 6.365Z" fill="#C1C6CE"/>
                     </svg></a>
             </li>
-            <li>
-                <a href="catalog.html" class="catalog-pages-item">Каталог</a>
-            </li>
-            <li>
-                <a href="#" class="catalog-pages-item">Инструмент</a>
+            <li class="catalog-pages-item">
+                <a href="catalog.html" class="catalog-pages-link">Каталог</a>
             </li>
             <li class="catalog-pages-item">
-                Перфораторы
+                <a href="#" class="catalog-pages-link">Инструмент</a>
+            </li>
+            <li class="catalog-pages-item">
+                <a class="catalog-pages-link">Перфораторы</a>
             </li>
         </ul>
         <div class="catalog-title">
@@ -158,7 +158,7 @@
             </form>
         </section>
         <section class="sorting">
-            <h2>Сортировка:</h2>
+            <h2 class="sorting-title">Сортировка:</h2>
             <ul>
                 <li>
                     <a href="#" class="sorting-item sorting-item-selected">По цене</a>
@@ -254,16 +254,16 @@
             </ul>
             <ul class="pagination">
                 <li class="pagination-item">
-                    <a class="page-item item-pages-selected">1</a>
+                    <a class="pagination-link pagination-link-selected">1</a>
                 </li>
                 <li class="pagination-item">
-                    <a href="#" class="page-item">2</a>
+                    <a href="#" class="pagination-link">2</a>
                 </li>
                 <li class="pagination-item">
-                    <a href="#" class="page-item">3</a>
+                    <a href="#" class="pagination-link">3</a>
                 </li>
-                <li class="pagination-item item-pages-next">
-                    <a href="#" class="page-item">Следующая</a>
+                <li class="pagination-item pagination-item-next">
+                    <a href="#" class="pagination-link">Следующая</a>
                 </li>
             </ul>
         </section>
