--- a/catalog.html
+++ b/catalog.html
@@ -99,7 +99,7 @@
             <h1 class="catalog-title-item">Перфораторы</h1>
         </div>
         <section class="all-filter">
-            <h2 class="catalog-filter">Фильтр:</h2>
+            <h2 class="title-filter-sort">Фильтр:</h2>
             <form method="get" action="https://echo.htmlacademy.ru" class="filter">
                 <fieldset>
                     <legend>Цена</legend>
@@ -158,7 +158,7 @@
             </form>
         </section>
         <section class="sorting">
-            <h2 class="sorting-title">Сортировка:</h2>
+            <h2 class="title-filter-sort">Сортировка:</h2>
             <ul>
                 <li>
                     <a href="#" class="sorting-item sorting-item-selected">По цене</a>
@@ -253,7 +253,7 @@
                 </li>
             </ul>
             <ul class="pagination">
-                <li class="pagination-item">
+                <li class="pagination-item  pagination-item-selected">
                     <a class="pagination-link pagination-link-selected">1</a>
                 </li>
                 <li class="pagination-item">
@@ -333,7 +333,7 @@
             <path d="M13.2729 10.5L20.6949 3.07799C21.0839 2.68899 21.0839 2.05299 20.6949 1.66399L19.3359 0.304995C18.9469 -0.0840054 18.3109 -0.0840054 17.9219 0.304995L10.4999 7.72699L3.07793 0.304995C2.68893 -0.0840054 2.05293 -0.0840054 1.66393 0.304995L0.304934 1.66399C-0.0840664 2.05299 -0.0840664 2.68899 0.304934 3.07799L7.72693 10.5L0.305934 17.922C-0.0830664 18.311 -0.0830664 18.947 0.305934 19.336L1.66493 20.695C2.05393 21.084 2.68993 21.084 3.07893 20.695L10.5009 13.273L17.9229 20.695C18.3119 21.084 18.9479 21.084 19.3369 20.695L20.6959 19.336C21.0849 18.947 21.0849 18.311 20.6959 17.922L13.2729 10.5Z" fill="#EE3643"/>
             </svg></a>
         <div class="basket-buttons">
-            <a href="#" class="basket-order">Оформить заказ</a>
+            <a href="#" class="regular-btn">Оформить заказ</a>
             <a href="#" class="basket-continue">Продолжить покупки</a>
         </div>
     </section>
